--- a/Client/BE_Covoiturage/app/src/main/res/layout/activity_login.xml
+++ b/Client/BE_Covoiturage/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
         android:id="@+id/login_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        android:fillViewport="false">
 
         <LinearLayout
             android:id="@+id/email_login_form"
@@ -60,6 +60,13 @@
                 android:layout_marginTop="16dp"
                 android:text="@string/action_sign_in"
                 android:textStyle="bold"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Large Text"
+                android:id="@+id/error"/>
 
         </LinearLayout>
     </ScrollView>
