--- a/Client/BE_Covoiturage/app/src/main/res/values/strings_activity_login.xml
+++ b/Client/BE_Covoiturage/app/src/main/res/values/strings_activity_login.xml
@@ -2,12 +2,12 @@
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
+    <string name="prompt_password">Mot de passe</string>
+    <string name="action_sign_in">Se connecter</string>
+    <string name="action_sign_in_short">Se connecter</string>
 
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
+    <string name="action_create_account">Créer un compte</string>
+
+    <string name="error_invalid_email">Veuillez rentrer une adresse email valide</string>
+    <string name="error_field_required">Ce champ est requis</string>
 </resources>
