--- a/trunk/Client/BE_Covoiturage/app/src/main/res/layout/route_item.xml
+++ b/trunk/Client/BE_Covoiturage/app/src/main/res/layout/route_item.xml
@@ -8,14 +8,10 @@
         android:id="@+id/week_day"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"/>
-    <!--FrameLayout
-        android:layout_width="fill_parent"
-        android:layout_height="100dp">
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.MapFragment"
+
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="100dp"/>
-    </FrameLayout-->
+        android:layout_height="70dp"
+        android:id="@+id/map_view"/>
 
 </LinearLayout>
