[android] Modification des champs de l'identité utilisateur. Séparation des affichages du profil. Modification date trajets. Chargement des trajets et autres infos utilisateur. Simplification des callbacks réseau et JSONObject [serveur] correction des requêtes trajets et utilisateur. Liste des lieux de travail

--- a/Client/BE_Covoiturage/app/src/main/res/layout/identite_user.xml
+++ b/Client/BE_Covoiturage/app/src/main/res/layout/identite_user.xml
@@ -7,25 +7,55 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Nom"
         android:ems="10"
-        android:id="@+id/NomUser"
+        android:id="@+id/first_name"
         android:layout_gravity="center_horizontal" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Prenom"
         android:ems="10"
-        android:id="@+id/PrenomUser" />
+        android:id="@+id/last_name" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPostalAddress"
+        android:inputType="textPersonName"
         android:ems="10"
-        android:id="@+id/Postal"
-        android:layout_gravity="center_horizontal"
-        android:text="Postal Code" />
+        android:id="@+id/city"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/zip_code"/>
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/driver"
+        android:id="@+id/driver"
+        android:checked="false"/>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Annuler"
+            android:id="@+id/cancel"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Enregistrer"
+            android:id="@+id/save"/>
+    </LinearLayout>
+
 </LinearLayout>
