--- a/Client/BE_Covoiturage/app/src/main/res/layout/route_view.xml
+++ b/Client/BE_Covoiturage/app/src/main/res/layout/route_view.xml
@@ -56,4 +56,11 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/save_button"
+        android:id="@+id/save_button"
+        android:layout_gravity="center_horizontal"/>
+
 </LinearLayout>
