--- a/trunk/Client/BE_Covoiturage/app/src/main/res/layout/route_view.xml
+++ b/trunk/Client/BE_Covoiturage/app/src/main/res/layout/route_view.xml
@@ -11,6 +11,13 @@
         android:id="@+id/route_active"
         android:checked="false"/>
 
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/notify_me_when_new_route"
+        android:id="@+id/notify_me"
+        android:checked="false"/>
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
