--- a/Client/BE_Covoiturage/app/src/main/res/layout/notification_view.xml
+++ b/Client/BE_Covoiturage/app/src/main/res/layout/notification_view.xml
@@ -14,7 +14,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Receive notification by mail"
-        android:id="@+id/receive"
+        android:id="@+id/receiveByMail"
+        android:checked="false" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Receive Notification in Smartphone"
+        android:id="@+id/receiveNotiInSmp"
         android:checked="false" />
 
 </LinearLayout>
